; ModuleID = '/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_tree.c_xmlTreeErr.c'
source_filename = "/home/carl/AnghaBench/reactos/sdk/lib/3rdparty/libxml2/extr_tree.c_xmlTreeErr.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [37 x i8] c"invalid hexadecimal character value\0A\00", align 1
@.str.1 = private unnamed_addr constant [33 x i8] c"invalid decimal character value\0A\00", align 1
@.str.2 = private unnamed_addr constant [36 x i8] c"unterminated entity reference %15s\0A\00", align 1
@.str.3 = private unnamed_addr constant [24 x i8] c"string is not in UTF-8\0A\00", align 1
@.str.4 = private unnamed_addr constant [25 x i8] c"unexpected error number\0A\00", align 1
@XML_FROM_TREE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32, i8*)* @xmlTreeErr to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @xmlTreeErr(i32 %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  %7 = alloca i8*, align 8
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  store i8* null, i8** %7, align 8
  %8 = load i32, i32* %4, align 4
  switch i32 %8, label %13 [
    i32 130, label %9
    i32 131, label %10
    i32 128, label %11
    i32 129, label %12
  ]

9:                                                ; preds = %3
  store i8* getelementptr inbounds ([37 x i8], [37 x i8]* @.str, i64 0, i64 0), i8** %7, align 8
  br label %14

10:                                               ; preds = %3
  store i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0), i8** %7, align 8
  br label %14

11:                                               ; preds = %3
  store i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.2, i64 0, i64 0), i8** %7, align 8
  br label %14

12:                                               ; preds = %3
  store i8* getelementptr inbounds ([24 x i8], [24 x i8]* @.str.3, i64 0, i64 0), i8** %7, align 8
  br label %14

13:                                               ; preds = %3
  store i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str.4, i64 0, i64 0), i8** %7, align 8
  br label %14

14:                                               ; preds = %13, %12, %11, %10, %9
  %15 = load i32, i32* @XML_FROM_TREE, align 4
  %16 = load i32, i32* %4, align 4
  %17 = load i32, i32* %5, align 4
  %18 = load i8*, i8** %7, align 8
  %19 = load i8*, i8** %6, align 8
  %20 = call i32 @__xmlSimpleError(i32 %15, i32 %16, i32 %17, i8* %18, i8* %19)
  ret void
}

declare dso_local i32 @__xmlSimpleError(i32, i32, i32, i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
